--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 --extra-index-url https://download.pytorch.org/whl/cu126
 black[jupyter]==24.10.0
 isort==6.0.1
+pandas==2.2.3
 pre-commit==v4.2.0
 torch==2.6.0+cu126
 torchaudio==2.6.0+cu126
